# modules/apps/object/object-rest-impl/rest-openapi.yaml
@@ -435,6 +435,31 @@ paths:
                             schema:
                                 $ref: "#/components/schemas/ObjectEntry"
             tags: ["ObjectEntry"]
+    "/by-external-reference-code/{externalReferenceCode}/by-version/{version}":
+        get:
+            operationId: getByExternalReferenceCodeByVersion
+            parameters:
+                - in: path
+                  name: externalReferenceCode
+                  required: true
+                  schema:
+                      type: string
+                - in: path
+                  name: version
+                  required: true
+                  schema:
+                      format: int32
+                      type: integer
+            responses:
+                200:
+                    content:
+                        application/json:
+                            schema:
+                                $ref: "#/components/schemas/ObjectEntry"
+                        application/xml:
+                            schema:
+                                $ref: "#/components/schemas/ObjectEntry"
+            tags: ["ObjectEntry"]
     "/by-external-reference-code/{externalReferenceCode}/versions":
         get:
             operationId: getByExternalReferenceCodeVersionsPage
@@ -486,31 +511,6 @@ paths:
                         application/json: {}
                         application/xml: {}
             tags: ["ObjectEntry"]
-    "/by-external-reference-code/{externalReferenceCode}/by-version/{version}":
-        get:
-            operationId: getByExternalReferenceCodeByVersion
-            parameters:
-                - in: path
-                  name: externalReferenceCode
-                  required: true
-                  schema:
-                      type: string
-                - in: path
-                  name: version
-                  required: true
-                  schema:
-                      format: int32
-                      type: integer
-            responses:
-                200:
-                    content:
-                        application/json:
-                            schema:
-                                $ref: "#/components/schemas/ObjectEntry"
-                        application/xml:
-                            schema:
-                                $ref: "#/components/schemas/ObjectEntry"
-            tags: [ "ObjectEntry" ]
     "/scopes/{scopeKey}/by-external-reference-code/{externalReferenceCode}":
         delete:
             operationId: deleteScopeScopeKeyByExternalReferenceCode
@@ -778,7 +778,7 @@ paths:
                         application/xml:
                             schema:
                                 $ref: "#/components/schemas/ObjectEntry"
-            tags: [ "ObjectEntry" ]
+            tags: ["ObjectEntry"]
     "/{objectEntryId}/object-actions/{objectActionName}":
         put:
             operationId: putObjectEntryObjectActionObjectActionName
